--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -130,18 +130,18 @@
 	  <div>
 	    <article>
 	      <blockquote>I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+		<cite>Yuri Y.</cite>
               </blockquote>
-	      <p>Yuri Y.</p>
 	    </article>
             <article>
 	      <blockquote>Thank you so much for your help. Techium company is awesome!
+		<cite>Dorrie S.</cite>
               </blockquote>
-	      <p>Dorrie S.</p>
 	    </article>
             <article>
 	      <blockquote>I love your system. Definitely worth the investment. I'd be lost without Techium company.
+		<cite>Sven H.</cite>
 	      </blockquote>
-	      <p>Sven H.</p>
 	    </article>
 	  </div>
 	</div>
