--- a/0x00-html_advanced/index.html
+++ b/0x00-html_advanced/index.html
@@ -200,7 +200,7 @@
 	<ul>
 	  <li>
 	    <a href="https://www.facebook.com/HolbertonSchool/">
-	      <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+	      <svg width="25px" height="25px" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 		<title>
 		Facebook icon
 		</title>
@@ -210,7 +210,7 @@
 	  </li>
           <li>
 	    <a href="https://twitter.com/holbertonschool">
-	      <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+	      <svg width="25px" height="25px" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 		<title>
 		Twitter icon
 		</title>
@@ -220,7 +220,7 @@
 	  </li>
           <li>
 	    <a href="https://www.instagram.com/holbertonschool/">
-	      <svg viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+	      <svg width="25px" height="25px" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 		<title>
 		Instagram icon
 		</title>
